src/objects/Ven_Werbeleistungen__c.object
<CustomObject>
    <description>Hier werden die Werbeleistungen für eine Opportunity angelegt.</description>
    <fields>
        <fullName>Ven_Abrechnung__c</fullName>
        <description>Fedl von Seven Ventures.
Angaben zur Werbeleistung.</description>
        <inlineHelpText>Wird das Volumen über die TV-Kampagne abgerechnet (bei TV-Bezogenen Werbeformen), oder als zusätzliche Leistung verbucht?</inlineHelpText>
        <label>Billing</label>
        <picklist>
            <picklistValues>
                <fullName>Contracted Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Top Volume</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ven_Access_Prime_17_00_20_00__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte den Daypart Share eintragen!</inlineHelpText>
        <label>Access Prime (17:00 - 20:00)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Day_Time_1_9_00_13_00__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte den Daypart Share eintragen!</inlineHelpText>
        <label>Day Time 1 (9:00 - 13:00)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Day_Time_2_13_00_17_00__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte den Daypart Share eintragen!</inlineHelpText>
        <label>Day Time 2 (13:00 - 17:00)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Description__c</fullName>
        <description>Feld von SevenVentures. Beschreibende Informationen die über die vorhandenen Feldern nicht erfasst wird.</description>
        <inlineHelpText>Beschreibende Informationen die über die vorhandenen Feldern nicht erfasst wird.</inlineHelpText>
        <label>Description</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Kabel_eins__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Feld für Seven Ventures im Objekt Werbeleistungen.</description>
        <inlineHelpText>Ist dieser Sender im Sendersplit enthalten?</inlineHelpText>
        <label>Kabel eins</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Kampagnenplanung__c</fullName>
        <description>Details zur Kampagne.
Für Seven Ventures.</description>
        <inlineHelpText>Hier bitte Details zur Kampagne eintragen.</inlineHelpText>
        <label>Kampagnenplanung</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Kampagnenzeitraum_bis__c</fullName>
        <description>Hier wird der Kampagnenzeitraum für die Werbeleistung angegeben.</description>
        <inlineHelpText>Hier wird der Kampagnenzeitraum für die Werbeleistung angegeben.</inlineHelpText>
        <label>Media End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ven_Kampagnenzeitraum_von__c</fullName>
        <description>Hier wird der Kampagnenzeitraum für die Werbeleistung angegeben.</description>
        <inlineHelpText>Hier wird der Kampagnenzeitraum für die Werbeleistung angegeben.</inlineHelpText>
        <label>Media Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ven_Kommentar__c</fullName>
        <description>Das Beschreibungsfeld ist für das Objekt Werbeleistung von Seven Ventures vorgesehen.</description>
        <inlineHelpText>Zusätzliche Kommentar zur gewählten Werbeform.</inlineHelpText>
        <label>Comment</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Kosten_bernahme__c</fullName>
        <description>Kostenübernahme für die Produktion des Media-Contents.</description>
        <inlineHelpText>Kostenübernahme der Produktion</inlineHelpText>
        <label>Costs</label>
        <picklist>
            <picklistValues>
                <fullName>SevenVentures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ven_Late_Prime_23_00_1_00__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte den Daypart Share eintragen!</inlineHelpText>
        <label>Late Prime (23:00 - 1:00)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Learning__c</fullName>
        <description>Informationen über das Reporting.
Für Seven Ventures.</description>
        <inlineHelpText>Informationen über das Reporting.</inlineHelpText>
        <label>Learning</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Morning_Time_6_00_9_00__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte den Daypart Share eintragen!</inlineHelpText>
        <label>Morning Time (6:00 - 9:00)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Neuer_Sender__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Feld für Seven Ventures im Objekt Werbeleistungen.</description>
        <inlineHelpText>Ist dieser Sender im Sendersplit enthalten?</inlineHelpText>
        <label>Neuer Sender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Night_Time_1_00_6_00__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte den Daypart Share eintragen!</inlineHelpText>
        <label>Night Time (1:00 - 6:00)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Opportunity__c</fullName>
        <description>Die Verknüpfung der Werbeleistung zur Opportunity wird hier hergestellt.</description>
        <inlineHelpText>Die Verknüpfung der Werbeleistung zu einer Opportunity wird hier eingetragen. Es handelt sich hier um eine Pflichtangabe.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Werbeleistungen</relationshipLabel>
        <relationshipName>Werbeleistungen</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ven_Prime_Time_20_00_23_00__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte den Daypart Share eintragen!</inlineHelpText>
        <label>Prime Time (20:00 - 23:00)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Pro7_Maxx__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Feld für Seven Ventures im Objekt Werbeleistungen.</description>
        <inlineHelpText>Ist dieser Sender im Sendersplit enthalten?</inlineHelpText>
        <label>Pro7 Maxx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Pro7__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Feld für Seven Ventures im Objekt Werbeleistungen.</description>
        <inlineHelpText>Ist dieser Sender im Sendersplit enthalten?</inlineHelpText>
        <label>Pro7</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Sat1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Feld für Seven Ventures im Objekt Werbeleistungen.</description>
        <inlineHelpText>Ist dieser Sender im Sendersplit enthalten?</inlineHelpText>
        <label>Sat.1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Sat_1_Gold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Feld für Seven Ventures im Objekt Werbeleistungen.</description>
        <inlineHelpText>Ist dieser Sender im Sendersplit enthalten?</inlineHelpText>
        <label>Sat.1 Gold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Sixx__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Feld für Seven Ventures im Objekt Werbeleistungen.</description>
        <inlineHelpText>Ist dieser Sender im Sendersplit enthalten?</inlineHelpText>
        <label>Sixx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Status__c</fullName>
        <description>Hier wird der Status der Werbeleistungen angegeben.</description>
        <inlineHelpText>Bitte den Status der Werbeleistung angeben.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Discussion</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Implemented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ven_Target_Group__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>z.B. E14+</inlineHelpText>
        <label>Target Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ven_Typ__c</fullName>
        <description>Jede Vertragsart hat bestimmte Typen die zur Verfügung stehen. Diese werden hier angezeigt.</description>
        <inlineHelpText>Bitte einen Typ auswählen der für diesen Vertrag gültig ist.</inlineHelpText>
        <label>Typ</label>
        <picklist>
            <picklistValues>
                <fullName>TV-Spots</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Splits/Diary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Topic Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GWS-Trailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InPage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InStream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full 7.1 M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>StandBy 7.1M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traffic Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HbbTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teletext</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video-Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celebrity Shareholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informationssendung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Namenspatronat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thementage/-Wochen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eco System - Booming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eco System - Sugar Ray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Performance / AM Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Ad Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privat Label</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ven_Umsetzung__c</fullName>
        <description>Verantwortlichkeit für die Produktion des Media-Contens.
Für Seven Ventures!</description>
        <inlineHelpText>Verantwortlichkeit für die Produktion des Media-Contens</inlineHelpText>
        <label>Realization</label>
        <picklist>
            <picklistValues>
                <fullName>SevenVentures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Access_Prime_max__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte das Maximum der % Verteilung für diesen Daypart Share angeben.</inlineHelpText>
        <label>% Verteilung auf Access Prime (max.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Access_Prime_min__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte das Minimum der % Verteilung für diesen Daypart Share angeben.</inlineHelpText>
        <label>% Verteilung auf Access Prime (min.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Day_Time_1_max__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte das Maximum der % Verteilung für diesen Daypart Share angeben.</inlineHelpText>
        <label>% Verteilung auf Day Time 1 (max.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Day_Time_1_min__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte das Minimum der % Verteilung für diesen Daypart Share angeben.</inlineHelpText>
        <label>% Verteilung auf Day Time 1 (min.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Day_Time_2_max__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte das Maximum der % Verteilung für diesen Daypart Share angeben.</inlineHelpText>
        <label>% Verteilung auf Day Time 2 (max.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Day_Time_2_min__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte das Minimum der % Verteilung für diesen Daypart Share angeben.</inlineHelpText>
        <label>% Verteilung auf Day Time 2 (min.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Kabel_eins_max__c</fullName>
        <description>Es wird die % Verteilung auf einen Sender angeben für die Medialeistungsverträge von Seven Ventures.</description>
        <inlineHelpText>Bitte das Maximum der % Verteilung für diesen Sender angeben.</inlineHelpText>
        <label>% Verteilung auf Kabel eins (max.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Kabel_eins_min__c</fullName>
        <description>Es wird die % Verteilung auf einen Sender angeben für die Medialeistungsverträge von Seven Ventures.</description>
        <inlineHelpText>Bitte das Minimum der % Verteilung für diesen Sender angeben.</inlineHelpText>
        <label>% Verteilung auf Kabel eins (min.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Late_Prime_max__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte das Maximum der % Verteilung für diesen Daypart Share angeben.</inlineHelpText>
        <label>% Verteilung auf Late Prime (max.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Late_Prime_min__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte das Minimum der % Verteilung für diesen Daypart Share angeben.</inlineHelpText>
        <label>% Verteilung auf Late Prime (min.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Morning_Time_1_min__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte das Minimum der % Verteilung für diesen Daypart Share angeben.</inlineHelpText>
        <label>% Verteilung auf Morning Time (min.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Morning_Time_max__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte das Maximum der % Verteilung für diesen Daypart Share angeben.</inlineHelpText>
        <label>% Verteilung auf Morning Time (max.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Neuer_Sender_max__c</fullName>
        <description>Es wird die % Verteilung auf einen Sender angeben für die Medialeistungsverträge von Seven Ventures.</description>
        <inlineHelpText>Bitte das Maximum der % Verteilung für diesen Sender angeben.</inlineHelpText>
        <label>% Verteilung auf Neuer Sender (max.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Neuer_Sender_min__c</fullName>
        <description>Es wird die % Verteilung auf einen Sender angeben für die Medialeistungsverträge von Seven Ventures.</description>
        <inlineHelpText>Bitte das Minimum der % Verteilung für diesen Sender angeben.</inlineHelpText>
        <label>% Verteilung auf Neuer Sender (min.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Night_Time_max__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte das Maximum der % Verteilung für diesen Daypart Share angeben.</inlineHelpText>
        <label>% Verteilung auf Night Time (max.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Night_Time_min__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte das Minimum der % Verteilung für diesen Daypart Share angeben.</inlineHelpText>
        <label>% Verteilung auf Night Time (min.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Prime_Time_max__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte das Maximum der % Verteilung für diesen Daypart Share angeben.</inlineHelpText>
        <label>% Verteilung auf Prime Time (max.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Prime_Time_min__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte das Minimum der % Verteilung für diesen Daypart Share angeben.</inlineHelpText>
        <label>% Verteilung auf Prime Time (min.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Pro7_Maxx_max__c</fullName>
        <description>Es wird die % Verteilung auf einen Sender angeben für die Medialeistungsverträge von Seven Ventures.</description>
        <inlineHelpText>Bitte das Maximum der % Verteilung für diesen Sender angeben.</inlineHelpText>
        <label>% Verteilung auf Pro7 Maxx (max.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Pro7_Maxx_min__c</fullName>
        <description>Es wird die % Verteilung auf einen Sender angeben für die Medialeistungsverträge von Seven Ventures.</description>
        <inlineHelpText>Bitte das Minimum der % Verteilung für diesen Sender angeben.</inlineHelpText>
        <label>% Verteilung auf Pro7 Maxx (min.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Pro7_max__c</fullName>
        <description>Es wird die % Verteilung auf einen Sender angeben für die Medialeistungsverträge von Seven Ventures.</description>
        <inlineHelpText>Bitte das Maximum der % Verteilung für diesen Sender angeben.</inlineHelpText>
        <label>% Verteilung auf Pro7 (max.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Pro7_min__c</fullName>
        <description>Es wird die % Verteilung auf einen Sender angeben für die Medialeistungsverträge von Seven Ventures.</description>
        <inlineHelpText>Bitte das Minimum der % Verteilung für diesen Sender angeben.</inlineHelpText>
        <label>% Verteilung auf Pro7 (min.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Sat1_Gold_min__c</fullName>
        <description>Es wird die % Verteilung auf einen Sender angeben für die Medialeistungsverträge von Seven Ventures.</description>
        <inlineHelpText>Bitte das Minimum der % Verteilung für diesen Sender angeben.</inlineHelpText>
        <label>% Verteilung auf Sat.1 Gold (min.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Sat1_max__c</fullName>
        <description>Es wird die % Verteilung auf einen Sender angeben für die Medialeistungsverträge von Seven Ventures.</description>
        <inlineHelpText>Bitte das Maximum der % Verteilung für diesen Sender angeben.</inlineHelpText>
        <label>% Verteilung auf Sat1 (max.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Sat1_min__c</fullName>
        <description>Es wird die % Verteilung auf einen Sender angeben für die Medialeistungsverträge von Seven Ventures.</description>
        <inlineHelpText>Bitte das Minimum der % Verteilung für diesen Sender angeben.</inlineHelpText>
        <label>% Verteilung auf Sat1 (min.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Sat_1_Gold_max__c</fullName>
        <description>Es wird die % Verteilung auf einen Sender angeben für die Medialeistungsverträge von Seven Ventures.</description>
        <inlineHelpText>Bitte das Maximum der % Verteilung für diesen Sender angeben.</inlineHelpText>
        <label>% Verteilung auf Sat.1 Gold (max.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Sixx_max__c</fullName>
        <description>Es wird die % Verteilung auf einen Sender angeben für die Medialeistungsverträge von Seven Ventures.</description>
        <inlineHelpText>Bitte das Maximum der % Verteilung für diesen Sender angeben.</inlineHelpText>
        <label>% Verteilung auf Sixx (max.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_auf_Sixx_min__c</fullName>
        <description>Es wird die % Verteilung auf einen Sender angeben für die Medialeistungsverträge von Seven Ventures.</description>
        <inlineHelpText>Bitte das Mimimum der % Verteilung für diesen Sender angeben.</inlineHelpText>
        <label>% Verteilung auf Sixx (min.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_des_Target_auf_Access_Pri__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte das Target (in %) für diesen Daypart Share angeben.</inlineHelpText>
        <label>% Verteilung auf Access Prime (target)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_des_Target_auf_Day_Time_1__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte das Target (in %) für diesen Daypart Share angeben.</inlineHelpText>
        <label>% Verteilung auf Day Time 1 (target)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_des_Target_auf_Day_Time_2__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte das Target (in %) für diesen Daypart Share angeben.</inlineHelpText>
        <label>% Verteilung auf Day Time 2 (target)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_des_Target_auf_Kabel_eins__c</fullName>
        <description>Es wird die % Verteilung auf einen Sender angeben für die Medialeistungsverträge von Seven Ventures.</description>
        <inlineHelpText>Bitte eine % Verteilung des Target für diesen Sender angeben.</inlineHelpText>
        <label>% Verteilung auf Kabel eins (target)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_des_Target_auf_Late_Prime__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte das Target (in %) für diesen Daypart Share angeben.</inlineHelpText>
        <label>% Verteilung auf Late Prime (target)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_des_Target_auf_Morning_Ti__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte das Target (in %) für diesen Daypart Share angeben.</inlineHelpText>
        <label>% Verteilung auf Morning Time (target)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_des_Target_auf_Neuer_Send__c</fullName>
        <description>Es wird die % Verteilung auf einen Sender angeben für die Medialeistungsverträge von Seven Ventures.</description>
        <inlineHelpText>Bitte das Maximum der % Verteilung für diesen Sender angeben.</inlineHelpText>
        <label>% Verteilung auf Neuer Sender (target)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_des_Target_auf_Night_Time__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte das Target (in %) für diesen Daypart Share angeben.</inlineHelpText>
        <label>% Verteilung auf Night Time (target)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_des_Target_auf_Prime_Time__c</fullName>
        <description>SevenVentures Feld.</description>
        <inlineHelpText>Bitte das Target (in %) für diesen Daypart Share angeben.</inlineHelpText>
        <label>% Verteilung auf Prime Time (target)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_des_Target_auf_Pro7__c</fullName>
        <description>Es wird die % Verteilung auf einen Sender angeben für die Medialeistungsverträge von Seven Ventures.</description>
        <inlineHelpText>Bitte eine % Verteilung des Target für diesen Sender angeben.</inlineHelpText>
        <label>% Verteilung auf Pro7 (target)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_des_Target_auf_Sat_1_Gold__c</fullName>
        <description>Es wird die % Verteilung auf einen Sender angeben für die Medialeistungsverträge von Seven Ventures.</description>
        <inlineHelpText>Bitte eine % Verteilung des Target für diesen Sender angeben.</inlineHelpText>
        <label>% Verteilung auf Sat.1 Gold (target)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_des_Target_auf_Sat_1__c</fullName>
        <description>Es wird die % Verteilung auf einen Sender angeben für die Medialeistungsverträge von Seven Ventures.</description>
        <inlineHelpText>Bitte eine % Verteilung des Target für diesen Sender angeben.</inlineHelpText>
        <label>% Verteilung auf Sat.1 (target)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Verteilung_des_Target_auf_Sixx__c</fullName>
        <description>Es wird die % Verteilung auf einen Sender angeben für die Medialeistungsverträge von Seven Ventures.</description>
        <inlineHelpText>Bitte eine % Verteilung des Target für diesen Sender angeben.</inlineHelpText>
        <label>% Verteilung auf Sixx (target)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Volumen__c</fullName>
        <description>Hier wird der Umfang der Kampagne eingetragen.</description>
        <inlineHelpText>Geplantes GMV.</inlineHelpText>
        <label>Gross Media Volumen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ven_Zeitschiene__c</fullName>
        <description>Hier wird die Zeitschiene ausgewählt.</description>
        <inlineHelpText>Hier bitte die Zeitschiene auswählen!</inlineHelpText>
        <label>Zeitschiene</label>
        <picklist>
            <picklistValues>
                <fullName>Morning Time     06:00 - 09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Time 1         09:00 - 13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Time 2         13:00 - 17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Prime     17:00 - 20:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime Time         20:00 - 23:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Time            23:00 - 01:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Night Time          01:00 - 06:00</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Verteilung_des_Target_auf_Pro7_Maxx__c</fullName>
        <description>Es wird die % Verteilung auf einen Sender angeben für die Medialeistungsverträge von Seven Ventures.</description>
        <inlineHelpText>Bitte eine % Verteilung des Target für diesen Sender angeben.</inlineHelpText>
        <label>% Verteilung auf Pro7 Maxx (target)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Werbeleistungen</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>WL-{0000000}</displayFormat>
        <label>Werbeleistungen-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Werbeleistungen</pluralLabel>
    <recordTypes>
        <fullName>Ven_Formats_Editorial</fullName>
        <active>true</active>
        <description>Datensartztyp für das Objekt Werbeleistungngen für Seven Ventures</description>
        <label>Formats/Editorial</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ven_Online</fullName>
        <active>true</active>
        <description>Datensartztyp für das Objekt Werbeleistungngen für Seven Ventures</description>
        <label>Online</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ven_Other</fullName>
        <active>true</active>
        <description>Datensartztyp für das Objekt Werbeleistungngen für Seven Ventures</description>
        <label>Other</label>
    </recordTypes>
</CustomObject>